# Collective_Motion_Rust

./: .gitignore  Cargo.toml  README.md  test.csv
csv/: .~lock.test.csv#  test.csv
json/: results_110.json  results_120.json  results_130.json  results_210.json  results_220.json  results_230.json  results_310.json  results_320.json  results_320_continued.json  results_330.json  results_330_continued.json  results_330_continued_pt2.json
json/pretty/: results_110.json.pretty  results_120.json.pretty  results_130.json.pretty  results_210.json.pretty  results_220.json.pretty  results_230.json.pretty  results_310.json.pretty  results_320.json.pretty  results_320_continued.json.pretty  results_330.json.pretty  results_330_continued.json.pretty  results_330_continued_pt2.json.pretty  results_330_long.json.pretty
scripts/: col_mot.sbatch  slurm-574271.out
scripts/results/: results_130.json
src/: boid.rs  graphics.rs  grid.rs  lib.rs  main.rs  main_BACKUP_12796.rs  main_LOCAL_12796.rs  main_REMOTE_12796.rs  model.rs  parameter_search.rs  plot.rs  predator.rs  testing.rs
src/boid/: vecmath.rs
