[package]
name = "boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
#ggez = "0.9.0-rc0"
ggez = "0.8.0"
rand_distr = "0.4.3"
ggegui = "0.3.4"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
dbscan = "0.3.1"
plotters = "0.3.1"
