[package]
name = "boids"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.0"
rand = "0.8.5"
rand_distr = "0.4.3"
csv = "1.1"
plotters = "0.3.1"
optimize = "0.1.0"
ndarray = "0.11.0"
cmaes = "0.2.1"
dbscan = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = {version = "1.0"}
